--- a/assets/style.css
+++ b/assets/style.css
@@ -1,4 +1,87 @@
-body {
+
+/* inter-300 - latin */
+@font-face {
+	font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+	font-family: 'Inter';
+	font-style: normal;
+	font-weight: 300;
+	src: url('./fonts/inter-v13-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  
+  /* inter-regular - latin */
+  @font-face {
+	font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+	font-family: 'Inter';
+	font-style: normal;
+	font-weight: 400;
+	src: url('./fonts/inter-v13-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  
+  /* inter-800 - latin */
+  @font-face {
+	font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+	font-family: 'Inter';
+	font-style: normal;
+	font-weight: 800;
+	src: url('./fonts/inter-v13-latin-800.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  
+/* spectral-sc-300 - latin */
+@font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Spectral SC';
+    font-style: normal;
+    font-weight: 300;
+    src: url('./fonts/spectral-sc-v12-latin-300.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  
+  /* spectral-sc-300italic - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Spectral SC';
+    font-style: italic;
+    font-weight: 300;
+    src: url('./fonts/spectral-sc-v12-latin-300italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  
+  /* spectral-sc-regular - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Spectral SC';
+    font-style: normal;
+    font-weight: 400;
+    src: url('./fonts/spectral-sc-v12-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  
+  /* spectral-sc-italic - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Spectral SC';
+    font-style: italic;
+    font-weight: 400;
+    src: url('./fonts/spectral-sc-v12-latin-italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  
+  /* spectral-sc-800 - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Spectral SC';
+    font-style: normal;
+    font-weight: 800;
+    src: url('./fonts/spectral-sc-v12-latin-800.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  
+  /* spectral-sc-800italic - latin */
+  @font-face {
+    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+    font-family: 'Spectral SC';
+    font-style: italic;
+    font-weight: 800;
+    src: url('./fonts/spectral-sc-v12-latin-800italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  
+
+  body {
 	max-width: 1920px;
 	margin: auto;
 }
@@ -40,8 +123,13 @@ body {
 
 .social-link img {
 	width: 20px;
+	height :20px;
 }
 
+.carousel-item img {
+	max-width: 1920Px;
+	height: 100%;
+}
 #about {
 	display: flex;
 	background-color: #F6D2B8;
@@ -67,10 +155,22 @@ body {
 	z-index: 0;
 }
 
+/********************************************/
 .picture img {
-	width: 100%;
-
+	width: 419px;
+	Height: 100%;
 }
+
+.pleft {
+width: 364;
+height: 363;
+}
+
+.pright{
+	width: 419;
+height: 418;
+}
+
 #about-me {
 	flex: 2
 }
@@ -84,15 +184,21 @@ body {
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
+	font-size: 16px;
+}
+h4, h5{
+	font-size: 25px;
+}
+
+.form-container h2{
+	font-size: 28px;
 }
 #about-me p {
 	width: 80%;
 	font-size: 14px;
 }
 
-#gallery {
-	/*	min-height: 100vh; */
-}
+
 .title{
 	text-align: center;
 	padding-block: 2em;
@@ -100,11 +206,29 @@ body {
 .gallery .nav {
 	justify-content: center;
 }
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link {
+
+main {
+	width: 100%;
+}
+
+/*
+.nav-pills .nav-link.active, .nav-pills .show > .nav-link{
 	color: #fff;
 	background-color: #BEB45A;
 	border-radius:0 ;
+}*/
+
+h1 > span {
+	font-size:12px;
+	display: block;
 }
+
+.nav-pills .nav-link.active-tag{
+	color: #fff;
+	background-color: #7F7833;
+	border-radius:0 ;
+}
+
 .nav-pills .nav-link {
 	color: #000
 }
@@ -125,6 +249,13 @@ body {
 	height: 100%;
 	object-fit: cover;
 	padding: .5em;
+	height :440px;
+	width: 440px;
+}
+
+.d-block w-100 {
+width: 928 ;
+height: 429;
 }
 .mg-prev, .mg-next {
 	width: 30px;
@@ -147,8 +278,9 @@ body {
 	font-family: Spectral;
 	font-style: italic;
 	font-weight: 300;
-
+	font-size: 40px;
 }
+
 .quote__author {
 	font-family: Spectral;
 	font-weight: 800;
@@ -255,7 +387,8 @@ input[type="submit"] {
 		margin-top: 0;
 		margin-bottom: 1em;
 	}
-	#about-me h6, #about-me p {
+
+	#about-me h3, #about-me p {
 		width: 100%;
 	}
 }
