--- a/assets/style.css
+++ b/assets/style.css
@@ -81,6 +81,26 @@
   }
   
 
+
+  /* spectral-regular - latin */
+@font-face {
+	font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+	font-family: 'Spectral';
+	font-style: normal;
+	font-weight: 400;
+	src: url('../fonts/spectral-v13-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+  
+  /* spectral-800italic - latin */
+  @font-face {
+	font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
+	font-family: 'Spectral';
+	font-style: italic;
+	font-weight: 800;
+	src: url('../fonts/spectral-v13-latin-800italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+  }
+
+
   body {
 	width: 100%;
 	max-width: 1920px;
@@ -161,11 +181,16 @@ main {
 	z-index: 0;
 }
 
-
+/*
 .pleft {
 width: 419px;
 height: 418px;
-}
+}*/
+
+.pleft {
+	width: 560px;
+	height: 558px;
+	}
 
 .pright{
 	width: 419px;
@@ -185,7 +210,7 @@ height: 418px;
 	font-weight: 800;
 	font-style: italic;
 	width: 60%;
-	font-size: 16px;
+	font-size: 17px;
 }
 h4, h5{
 	font-size: 25px;
@@ -207,15 +232,6 @@ h4, h5{
 .gallery .nav {
 	justify-content: center;
 }
-
-
-
-/*
-.nav-pills .nav-link.active, .nav-pills .show > .nav-link{
-	color: #fff;
-	background-color: #BEB45A;
-	border-radius:0 ;
-}*/
 
 h1 > span {
 	font-size:12px;
@@ -377,6 +393,13 @@ input[type="submit"] {
 	background-color: #BEB45A;
 	padding: .5em 1em
 }
+footer div {
+	display: flex;
+ 	justify-content: center;
+	font-size: 15px;
+	padding: 10px;
+}
+
 
 @media all and (max-width: 1180px) {
 	.picture {
