--- a/assets/style.css
+++ b/assets/style.css
@@ -88,7 +88,7 @@
 	font-family: 'Spectral';
 	font-style: normal;
 	font-weight: 400;
-	src: url('../fonts/spectral-v13-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url('./fonts/spectral-v13-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   }
   
   /* spectral-800italic - latin */
@@ -97,7 +97,7 @@
 	font-family: 'Spectral';
 	font-style: italic;
 	font-weight: 800;
-	src: url('../fonts/spectral-v13-latin-800italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
+	src: url('./fonts/spectral-v13-latin-800italic.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
   }
 
 
